--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -170,8 +170,15 @@
                         <td>4</td>
                         <td>Tue  Feb  3</td>
                         <td>lecture</td>
-                        <td>Hyperparameter tuning <a href="https://docs.google.com/presentation/d/1ANAFFiAU6BzFVvzKcyhfbnNhcKCA9mRQ/edit?usp=drive_link&ouid=108006266785637771510&rtpof=true&sd=true"> [Slides]</a></td>
+                        <td>Hyperparameter tuning </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Optional readings</summary>
+                          <ul>
+                          <li><a href="https://scs.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=9f2d6eb7-c369-4f5e-85e2-b2a3012d9f0d">Greg Kochanski, Google Deep Mind, guest lecture on Vizier, Spring 2025 in 10-605</a>
+                          <li><a href="https://scs.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=4ec8263d-29d1-4709-9fe8-b3830115deb7">William's lecture on Hyperparameter Search, Fall 2025 in 10-605 (alternate to Greg's talk)</a>
+                          <li><a href="https://www.jmlr.org/papers/v18/16-558.html">Hyperband - A Novel Bandit Based Approach to Hyperparameter Optimization, JMLR 2018</a>
+                          </ul>
+                          </details>
                         </td>
                         <td>
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
@@ -186,7 +193,7 @@
                         <td>4</td>
                         <td>Thu  Feb  5</td>
                         <td>lecture</td>
-                        <td>Interpretability </td>
+                        <td>Interpretability and Monitorability </td>
                         <td>
                         </td>
                         <td>
@@ -228,13 +235,14 @@
                         <td>6</td>
                         <td>Tue  Feb 17</td>
                         <td>lecture</td>
-                        <td>Privacy </td>
+                        <td>Interpretability as Communication </td>
                         <td>
                         </td>
                         <td>
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
-                          <li><a href="https://research.google/blog/distributed-differential-privacy-for-federated-learning/">Distributed differential privacy for federated learning, 2023</a>
+                          <li><a href="https://digitalcommons.unl.edu/cgi/viewcontent.cgi?article=1317&context=edpsychpapers">Essay Review of The Enigma of Reason by Hugo Mercier and Dan Sperberof Reason, by Mercier and Sperber</a>
+                          <li><a href="3d500d31738cd39eb49a748fa4-Paper-Conference.pdf">Learning to Scaffold: Optimizing Model Explanations for Teaching, Fernandes et al, 2022</a>
                           </ul>
                           </details>
                         </td>
@@ -243,10 +251,23 @@
                         <td>6</td>
                         <td>Thu  Feb 19</td>
                         <td>lecture</td>
-                        <td>Distribution Shift and Robustness </td>
+                        <td>Network Effects and ML </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Optional readings</summary>
+                          <ul>
+                          <li><a href="https://www.cs.cornell.edu/home/kleinber/networks-book/">Information cascades, Ch 16, Easly and Kleinberg, 2010</a>
+                          <li><a href="https://onlinelibrary.wiley.com/doi/pdfdirect/10.1111/j.1756-8765.2009.01030.x">Salganic, Dodds, Watts, Science 2006</a>
+                          <li><a href="http://nifty.stanford.edu/2014/mccown-schelling-model-segregation/">Schelling Spatial Segregation model</a>
+                          </ul>
+                          </details>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
+                          <ul>
+                          <li><a href="https://www.nature.com/articles/s42256-025-01159-8.epdf?sharing_token=xJmd4cDnq2FxFbfAnUEO8tRgN0jAjWel9jnR3ZoTv0PvnbYm4DP1YR2ybrBtLKE2-ci89m0C22f_VxZ6qtDz6gdTCqxdpdoWgGrsoFGUIgaxb78BHjLOCrIRP22lGITtLPPek5CCq6IFWAXlPQcqOE3r_1m5NRTJunaxyXptY-c%3D">LLM use in scholarly writing, Earp et al, 2025</a>
+                          <li><a href="https://arxiv.org/pdf/2510.22954">Artificial Hivemind: The Open-Ended Homogeneity of Language Models, 2025</a>
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
@@ -298,7 +319,7 @@
                         <td>9</td>
                         <td>Tue  Mar 10</td>
                         <td>lecture</td>
-                        <td>Fairness </td>
+                        <td>Working with Agents </td>
                         <td>
                         </td>
                         <td>
@@ -307,13 +328,19 @@
                           <li>Project Assignment 3 due (initial result writeups)
                           </ul>
                           </details>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
+                          <ul>
+                          <li><a href="https://arxiv.org/pdf/2512.04123">“Measuring Agents in Production, 2025"</a>
+                          <li><a href="https://arxiv.org/abs/2503.13657">When Do Multi-Agent Systems Fail, 2025</a>
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
                         <td>9</td>
                         <td>Thu  Mar 12</td>
                         <td>lecture</td>
-                        <td>Safety </td>
+                        <td>Model Compression - Guest speaker, Steven Kolawole </td>
                         <td>
                         </td>
                         <td>
@@ -323,7 +350,7 @@
                         <td>10</td>
                         <td>Tue  Mar 17</td>
                         <td>lecture</td>
-                        <td>Model Compression </td>
+                        <td>Distribution Shift </td>
                         <td>
                         </td>
                         <td>
@@ -333,7 +360,7 @@
                         <td>10</td>
                         <td>Thu  Mar 19</td>
                         <td>lecture</td>
-                        <td>Uncertainty and Calibration </td>
+                        <td>Robustness </td>
                         <td>
                         </td>
                         <td>
@@ -394,10 +421,16 @@
                         <td>13</td>
                         <td>Tue  Apr  7</td>
                         <td>lecture</td>
-                        <td>Network Effects and ML </td>
+                        <td>Mechanistic Interpretability </td>
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
+                          <ul>
+                          <li><a href="https://www.alignmentforum.org/posts/StENzDcD3kpfGJssR/a-pragmatic-vision-for-interpretability">A Pragmatic Vision for Interpretability, Neel Nanda et al</a>
+                          <li><a href="https://arxiv.org/abs/2512.18792">The Dead Salmons of AI Interpretability, 2025</a>
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
@@ -414,7 +447,7 @@
                         <td>14</td>
                         <td>Tue  Apr 14</td>
                         <td>lecture</td>
-                        <td>TBA </td>
+                        <td>Privacy and Federated Learning </td>
                         <td>
                         </td>
                         <td>
