--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -386,7 +386,7 @@
                         <td>11</td>
                         <td>Thu  Mar 26</td>
                         <td>lecture</td>
-                        <td>ML and Intervention </td>
+                        <td>Graph Data - Guest Speaker, Karish Grover </td>
                         <td>
                         </td>
                         <td>
@@ -457,7 +457,7 @@
                         <td>14</td>
                         <td>Thu  Apr 16</td>
                         <td>lecture</td>
-                        <td>TBA </td>
+                        <td>Societal Impact of ML </td>
                         <td>
                         </td>
                         <td>
