--- a/pubs.html
+++ b/pubs.html
@@ -3,10 +3,15 @@
 <body><main class='container'><header><h3>Papers by William W. Cohen</h3>
 </header>
 <section>
+<h3>Papers published in 2026</h3>
+<ol>
+<li>Aditya Kumar, William W. Cohen (2026): <a href="https://arxiv.org/abs/2602.00276">Localizing and Correcting Errors for LLM-based Planners</a> in progress.
+</li>
+<li>Charlie Cowen-Breen, Alekh Agarwal, Stephen Bates, William W. Cohen, Jacob Eisenstein, Amir Globerson, Adam Fisch (2026): <a href="https://openreview.net/pdf?id=gJZ5rf2bS4">Multiple Prediction Powered Inference</a> in ICLR 2026.
+</li>
+</ol>
 <h3>Papers published in 2025</h3>
 <ol>
-<li>Charlie Cowen-Breen, Alekh Agarwal, Stephen Bates, William W. Cohen, Jacob Eisenstein, Amir Globerson, Adam Fisch (2025): <a href="https://openreview.net/pdf?id=gJZ5rf2bS4">Multiple Prediction Powered Inference</a> in ICLR 2026.
-</li>
 <li>Jixuan Leng, Cassandra A. Cohen, Zhixian Zhang, Chenyan Xiong, William W. Cohen (2025): <a href="https://arxiv.org/abs/2505.24217">Semi-structured LLM Reasoners Can Be Rigorously Audited</a> in preparation.
 </li>
 <li>Jixuan Leng, Chengsong Huang, Langlin Huang, Bill Yuchen Lin, William W. Cohen, Haohan Wang, Jiaxin Huang (2025): <a href="https://arxiv.org/abs/2504.00043">CrossWordBench: Evaluating the Reasoning Capabilities of LLMs and LVLMs with Controllable Puzzle Generation</a> in preparation.
@@ -18,9 +23,9 @@
 </li>
 <li>Adam Fisch, Joshua Maynez, R. Alex Hofer, Bhuwan Dhingra, Amir Globerson and William W. Cohen (2024): <a href="https://arxiv.org/abs/2406.04291">Stratified Prediction-Powered Inference for Hybrid Language Model Evaluation</a> in NeurIPS-2024.
 </li>
-<li>Gabriel Sarch, Lawrence Jang, Michael J. Tarr, William W. Cohen, Kenneth Marino, Katerina Fragkiadaki (2024): <a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/8ac50fd0a4eeeb1f077b17bb7c5353c3-Abstract-Conference.html">{VLM} Agents Generate Their Own Memories: Distilling Experience into Embodied Programs of Thought</a> in NeurIPS-2024.
+<li>Gabriel Sarch, Lawrence Jang, Michael J. Tarr, William W. Cohen, Kenneth Marino, Katerina Fragkiadaki (2024): <a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/8ac50fd0a4eeeb1f077b17bb7c5353c3-Abstract-Conference.html">VLM Agents Generate Their Own Memories: Distilling Experience into Embodied Programs of Thought</a> in NeurIPS-2024.
 </li>
-<li>Gabriel_Herbert_Sarch, Lawrence Jang, Michael J. Tarr, William W. Cohen, Kenneth Marino, Katerina Fragkiadaki (2024): <a href="https://openreview.net/pdf?id=WwCEKRB9Yv">From Observation to Abstractions: Efficient In-Context Learning from Human Feedback and Visual Demonstrations for {VLM} Agents</a> in Training Agents with Foundation Models Workshop at RLC 2024.
+<li>Gabriel_Herbert_Sarch, Lawrence Jang, Michael J. Tarr, William W. Cohen, Kenneth Marino, Katerina Fragkiadaki (2024): <a href="https://openreview.net/pdf?id=WwCEKRB9Yv">From Observation to Abstractions: Efficient In-Context Learning from Human Feedback and Visual Demonstrations for VLM Agents</a> in Training Agents with Foundation Models Workshop at RLC 2024.
 </li>
 <li>R. Alex Hofer, Joshua Maynez, Bhuwan Dhingra, Adam Fisch, Amir Globerson and William W. Cohen (2024): <a href="http://arxiv.org/abs/2405.06034">Bayesian Prediction-Powered Inference</a> in progress.
 </li>
