--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -170,7 +170,7 @@
                         <td>4</td>
                         <td>Tue  Feb  3</td>
                         <td>lecture</td>
-                        <td>Hyperparameter tuning </td>
+                        <td>Hyperparameter tuning <a href="https://docs.google.com/presentation/d/1ANAFFiAU6BzFVvzKcyhfbnNhcKCA9mRQ/edit?slide=id.p1#slide=id.p1"> [Slides]</a></td>
                         <td>
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Optional readings</summary>
                           <ul>
@@ -193,7 +193,7 @@
                         <td>4</td>
                         <td>Thu  Feb  5</td>
                         <td>lecture</td>
-                        <td>Interpretability and Monitorability </td>
+                        <td>Interpretability and Monitorability <a href="https://docs.google.com/presentation/d/1AjaFWLo9Bbuz-VzqB1NcE62vt4Vkfhe0/edit?slide=id.p1#slide=id.p1"> [Slides]</a></td>
                         <td>
                         </td>
                         <td>
@@ -242,7 +242,7 @@
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
                           <li><a href="https://digitalcommons.unl.edu/cgi/viewcontent.cgi?article=1317&context=edpsychpapers">Essay Review of The Enigma of Reason by Hugo Mercier and Dan Sperberof Reason, by Mercier and Sperber</a>
-                          <li><a href="3d500d31738cd39eb49a748fa4-Paper-Conference.pdf">Learning to Scaffold: Optimizing Model Explanations for Teaching, Fernandes et al, 2022</a>
+                          <li><a href="https://arxiv.org/abs/2204.10810">Learning to Scaffold: Optimizing Model Explanations for Teaching, Fernandes et al, 2022</a>
                           </ul>
                           </details>
                         </td>
@@ -251,7 +251,7 @@
                         <td>6</td>
                         <td>Thu  Feb 19</td>
                         <td>lecture</td>
-                        <td>Network Effects and ML </td>
+                        <td>Network Effects and ML <a href="https://docs.google.com/presentation/d/1KTNKxEachgvrI81JnjV33ccfivU9Awdi/edit?slide=id.p23#slide=id.p23"> [Slides]</a></td>
                         <td>
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Optional readings</summary>
                           <ul>
