--- a/index.html
+++ b/index.html
@@ -548,11 +548,11 @@
 	anagram instead: 'I shall now cite women'".)</p>
 
       <p>Through my advisor, Alex Borgida, I can trace
-	my <a href="lineage.html">"academic lineage"</a> back to luminaries
-	like Leibniz, Newton and Alfred Whitehead.  <b>Update:</b> My former
-	student <a href="https://andrewoarnold.com">Andrew Arnold</a> has gone back
-	even <a href="https://andrewoarnold.com/genealogy.png">further</a>, to
-	Galileo!</p>
+	my <a href="lineage3.html">"academic lineage"</a> back to
+	luminaries like Leibniz, Newton and Alfred Whitehead.  Most of
+	this informationw was unearthed by my former
+	student <a href="https://andrewoarnold.com">Andrew Arnold</a>, here's
+	his version of the information.
 
       <p>In 2014 I unearthed a strange relic from the past, a sort of
 	game/website I wrote for my
