steven lecture papers

--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -364,6 +364,12 @@
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
+                          <ul>
+                          <li><a href="https://arxiv.org/pdf/2310.04621">Model Compression in Practice, Hohman et al, CHI 2024</a>
+                          <li><a href="https://arxiv.org/pdf/1911.05248">What Do Compressed Deep Neural Networks Forget? Hooker et al, 2021</a>
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
