--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -251,6 +251,7 @@
                           <li><a href="https://arxiv.org/pdf/1909.07913">Learning to Decieve with Attention-Based Explanations, 2020</a>
                           <li><a href="https://arxiv.org/pdf/2308.14272">Goodhart’s Law Applies to NLP’s Explanation Benchmarks. 2023</a>
                           <li><a href="https://arxiv.org/pdf/2012.00893">Evaluating Explanations: How much do explanations from the teacher aid students? Pruthi et al 2021.</a>
+                          <li><a href="https://proceedings.mlr.press/v119/perdomo20a.html">Performative Prediction, PMLR 2020</a>
                           </ul>
                           </details>
                         </td>
