--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -302,7 +302,7 @@
                         <td>
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Deadlines</summary>
                           <ul>
-                          <li>Project Assignment 2 due (project pitches)
+                          <li>Project Assignment 2 due (talks for project pitches)
                           </ul>
                           </details>
                         </td>
@@ -315,6 +315,11 @@
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Deadlines</summary>
+                          <ul>
+                          <li>Project Assignment 2 due (writeup, due 2/27)
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
@@ -345,11 +350,6 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Deadlines</summary>
-                          <ul>
-                          <li>Project Assignment 3 due (initial result writeups)
-                          </ul>
-                          </details>
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
                           <li><a href="https://arxiv.org/pdf/2512.04123">“Measuring Agents in Production, 2025"</a>
